--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -4,14 +4,14 @@ on:
   workflow_dispatch:
   push:
     branches:
-    - DotNet-Project-deployment-only-by-code
+      - DotNet-Project-deployment-only-by-code
 
 env:
   AZURE_WEBAPP_NAME: utctime-service
-  AZURE_WEBAPP_PACKAGE_PATH: "./Time.api/publish"
+  AZURE_WEBAPP_PACKAGE_PATH: "./Time.Api/publish"
   DOTNET_VERSION: "9.x"
   SOLUTION_PATH: "Solution.sln"
-  API_PROJECT_PATH: "Time.api"
+  API_PROJECT_PATH: "Time.Api"
   PUBLISH_DIR: "./publish"
 
 jobs:
@@ -37,7 +37,7 @@ jobs:
         run: dotnet test ${{ env.SOLUTION_PATH }} --configuration Release --no-restore --no-build --verbosity normal
       
       - name: Publish
-        run: dotnet publish ${{ env.API_PROJECT_PATH}} --configuration Release --no-restore --no-build --property:PublishDir=${{ env.PUBLISH_DIR }}
+        run: dotnet publish ${{ env.API_PROJECT_PATH }} --configuration Release --no-restore --no-build --property:PublishDir=${{ env.PUBLISH_DIR }}
 
       - name: Publish Artifacts
         uses: actions/upload-artifact@v4
@@ -46,20 +46,20 @@ jobs:
           path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 
   deploy:
-  name: Deploy to Azure
-  runs-on: ubuntu-latest
-  needs: [build-and-test]
+    name: Deploy to Azure
+    runs-on: ubuntu-latest
+    needs: build-and-test
 
-  steps:
-    - name: Download artifact from build job
-      uses: actions/download-artifact@v4
-      with:
-        name: webapp
-        path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: webapp
+          path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 
-    - name: Deploy
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
+      - name: Deploy
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
